@@ -1,3 +1,9 @@
+2006-08-11 01:53-EDT Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormCustomView.m: Corrected encoding issues with custom
+	view in encodeWithCoder: it now properly encodes itself as
+	an NSCustomView.
+
 2006-08-09 02:29-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormCore/GormCustomView.m: encodeWithCoder: changes to encode the
